# ProtoBridge

./: .gitignore  README.md  pyproject.toml
examples/: advanced.yaml  basic.yaml
protobridge/: __init__.py  __main__.py  api.py
protobridge/converters/: __init__.py
protobridge/core/: adapter.py  server.py
protobridge/middleware/: __init__.py
protobridge/utils/: __init__.py
tests/: test_all.py
